<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:layout_margin="10dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_login"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"/>

        <EditText
            android:id="@+id/edit_email"
            style="@style/EditText"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="50dp"
            android:autofillHints="@string/hint_email"/>

        <EditText
            android:id="@+id/edit_senha"
            style="@style/EditText"
            android:hint="@string/hint_senha"
            android:inputType="numberPassword"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/hint_senha"/>

        <Button
            android:id="@+id/bt_entrar"
            style="@style/Button"
            android:text="@string/text_button"
            android:layout_marginTop="20dp"/>

        <ProgressBar
            android:id="@+id/progressBar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@android:color/white"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tela_cadastro"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>